adds more bit manipulation and general tidy